--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -2,13 +2,13 @@ body{
   background-color: #DDD;
   width: 100%;
   height: 700px;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 /* ################  estilos gerais  #######################*/
 .bt_geral{
  margin: 10px;
 }
-.bt_geral:hover{ color: #FFDD09; transition: 0.2s; }
 
 .bloco_interno{
   margin-left: auto;
@@ -20,6 +20,20 @@ body{
 select{
   width: 300px;
 }
+
+td{
+  border-collapse: collapse;
+}
+
+.linha_lista{
+  cursor: pointer;
+  border-bottom: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #DDD;
+}
+.linha_lista:hover{ background-color: rgba(0,0,0,0.1)}
+.linha_lista:active{ background-color: rgba(0,0,0,0.2)}
+.linha_lista_checked{ background-color: rgba(0,0,0,0.2)}
 
 
 /* ################  estilo div principal  ##################### */
