--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -113,15 +113,25 @@ h3{
   margin-top: 10%;
 }
 
+.about{
+  float: right;
+  height: 20px;
+  margin-right: 5px;
+  padding-left: 20px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  vertical-align: text-bottom;
+}
+
 /* ################  estilo div principal  ##################### */
 #tela_app{
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
-  background-color: #F4F1DE;
+  background-color: #F4F0D4;
   width: 1000px;
-  height: 600px;
+  height: 650px;
 }
 
 #barra_sup{
