--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -161,7 +161,7 @@ ul{
       text-decoration: none;
       float: left;
       font-family: 'Raleway', sans-serif;
-      font-weight: 400;
+      font-weight: bold;
       font-stretch: expanded;
       font-size: 16px;
       transition: 0.7s;
